--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vertigo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <img src="./img/logo.svg" alt="logo">
     </header>
-    
+
     <main>
         <section class="descrition">
             <h1>Acesse a plataforma</h1>
@@ -25,20 +30,21 @@
                     <label for="email">E-mail</label>
                     <input type="email" placeholder="Digite seu email" id="email">
                 </div>
-            <form action="">
-                <div class="input-box">
-                    <label for="senha">E-mail</label>
-                    <a href="">Esqueceu a senha?</a>
-                    <input type="password" placeholder="Digite sua senha" id="senha">
-                </div>
+                <form action="">
+                    <div class="input-box">
+                        <label for="senha">E-mail</label>
+                        <a href="">Esqueceu a senha?</a>
+                        <input type="password" placeholder="Digite sua senha" id="senha">
+                    </div>
 
-                <button>Entrar</button>
-            </form>
+                    <button>Entrar</button>
+                </form>
 
-            <p>
-                Ainda não tem uma conta? <a href="">Inscreva-se</a>
-            </p>
+                <p>
+                    Ainda não tem uma conta? <a href="">Inscreva-se</a>
+                </p>
         </section>
     </main>
 </body>
+
 </html>
