inserção do background desktop

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             </section>
         </main>
     </div>
+    <div class="bg-desktop">
+        <img src="./img/bg-desktop.png" alt="backgroud bg-desktop">
+    </div>
 </body>
 
 </html>
